Fix filter name problem Fix option box z-index

--- a/src/components/SearchBox/components/OptionsBox/optionsBox.css
+++ b/src/components/SearchBox/components/OptionsBox/optionsBox.css
@@ -1,5 +1,6 @@
 .options-box {
     position: absolute;
+    z-index:300;
     top: -200px;
     left: 0;
     width: 100%;
